# TickTackToe-MinMaxStrategy

./: CMakeLists.txt  ai_player.cc  ai_player.h  human_player.cc  human_player.h  main.cc  player.h  tictactoe.cc  tictactoe.h
